namespace Application.Abstract;

public interface IEnumResolver
{
    string Resolve(Enum value);
}